crates/runtime/tests/models/snapshots/integration_models__models__hf__chat_completion.snap
---
source: crates/runtime/tests/models/hf.rs
expression: "normalize_chat_completion_response(response, true)"
---
{
  "choices": [
    {
      "finish_reason": "tool_calls",
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "function": {
              "arguments": "{\"output\":\"full\"}",
              "name": "table_schema"
            },
            "id": "call-ab03970b-662f-49fb-a9b2-861609778709",
            "type": "function"
          }
        ]
      }
    }
  ],
  "created": "created_val",
  "id": "id_val",
  "model": "hf_model",
  "object": "chat.completion",
  "system_fingerprint": "system_fingerprint_val",
  "usage": {
    "completion_tokens": "completion_tokens_val",
    "prompt_tokens": "prompt_tokens_val",
    "total_tokens": "total_tokens_val"
  }
}
