crates/runtime/tests/models/snapshots/integration_models__models__hf__embeddings_2.snap
---
source: crates/runtime/tests/models/hf.rs
expression: normalize_embeddings_response(response)
---
{
  "object": "list",
  "model": "hf_minilm",
  "data": [
    {
      "index": 0,
      "object": "embedding",
      "embedding": "array_384_items"
    },
    {
      "index": 1,
      "object": "embedding",
      "embedding": "array_384_items"
    }
  ],
  "usage": {
    "prompt_tokens": 256,
    "total_tokens": 256
  }
}
