crates/runtime/tests/models/snapshots/integration_models__models__hf__embeddings_3.snap
---
source: crates/runtime/tests/models/hf.rs
expression: normalize_embeddings_response(response)
---
{
  "object": "list",
  "model": "hf_e5",
  "data": [
    {
      "index": 0,
      "object": "embedding",
      "embedding": "array_384_items"
    }
  ],
  "usage": {
    "prompt_tokens": 12,
    "total_tokens": 12
  }
}
