crates/runtime/tests/models/snapshots/integration_models__models__hf__nsql_sample_data_task.snap
---
source: crates/runtime/tests/models/hf.rs
expression: sample_data_task.1
---
DistinctColumns({"dataset":"spice.public.taxi_trips","limit":3,"cols":null})
