crates/runtime/tests/models/snapshots/integration_models__models__hf__nsql_sample_data_task_sql_query.snap
---
source: crates/runtime/tests/models/hf.rs
expression: sql_query_task.1
---
SELECT "VendorID" FROM (
                SELECT "VendorID", 1 as priority
                FROM (SELECT DISTINCT "VendorID" FROM spice.public.taxi_trips)
                UNION ALL
                SELECT "VendorID", 2 as priority
                FROM spice.public.taxi_trips
            ) combined
            ORDER BY priority, "VendorID"
            LIMIT 3
