crates/runtime/tests/models/snapshots/integration_models__models__hf__nsql_table_schema_task.snap
---
source: crates/runtime/tests/models/hf.rs
expression: pretty_json_str(&table_schema_task.1)?
---
{
  "output": "full",
  "tables": [
    "spice.public.taxi_trips"
  ]
}
